Add sprint results to Athletics/Sprinting chat message (#173)

--- a/templates/chat/roll-sr6.html
+++ b/templates/chat/roll-sr6.html
@@ -86,6 +86,14 @@
       {{/if}}
     </div>
   {{/if}}
+  
+   {{#if (eq configured.skillSpec "sprinting")}}
+   <!-- Sprinting Details -->
+   <div class="chat-sprinting">
+      <hr>
+      <h4>{{ configured.sprintingResult }}</h4>
+   </div>
+   {{/if}}
 
    {{#if (eq rollType "legwork")}}
    <!-- Legwork Details -->
