--- a/templates/parts/edge-token.html
+++ b/templates/parts/edge-token.html
@@ -13,7 +13,7 @@
 	</div>
 
 	<div class="field edgeChanged">
-		<label class="edge-max-label"> {{localize 'attrib.edg'}} </label>
+		<label class="edge-max-label"><a class="attributeonly-roll attribute-poolmod" data-pool="{{system.edge.max}}" data-roll-id="edg">{{localize 'attrib.edg'}}</a></label>
 		<input name="edgeMax" class="edge-max" type="number" data-dtype="Number" data-field="system.edge.max" value="{{system.edge.max}}" placeholder="max" title="{{localize 'attrib.edg'}}" min="1" max="6">
 	</div>
 </div>
