--- a/templates/item/shadowrun6-contact-sheet.html
+++ b/templates/item/shadowrun6-contact-sheet.html
@@ -7,12 +7,14 @@
             <table>
                 <tr>
                     <th>{{localize 'shadowrun6.contact.type'}}</th>
+                    <th>{{localize 'shadowrun6.contact.pronouns'}}</th>
                     <th>{{localize 'shadowrun6.contact.rating'}}</th>
                     <th>{{localize 'shadowrun6.contact.loyalty'}}</th>
                     <th>{{localize 'shadowrun6.contact.favors'}}</th>
                 </tr>
                 <tr>
                     <td style="width:8em"> <input name="system.type" class="box" type="text" value="{{item.system.type}}" data-field="system.type"  /></td>
+                    <td style="width:8em"> <input name="system.pronouns" class="box" type="text" value="{{item.system.pronouns}}" data-field="system.pronouns"  /></td>
                     <td class="box centered"> <input name="system.rating" class="box" type="number" value="{{item.system.rating}}" data-field="system.rating" style="width:2em" /></td>
                     <td class="box centered"> <input name="system.loyality" class="box" type="number" value="{{item.system.loyalty}}" data-field="system.loyalty" style="width:2em" /></td>
                     <td class="box centered"> <input name="system.favors" class="box" type="number" value="{{item.system.favors}}" data-field="system.favors" style="width:2em" /></td>
