Enhancement: Item Effects are now also draggable

--- a/templates/item/item-effects.hbs
+++ b/templates/item/item-effects.hbs
@@ -40,7 +40,7 @@
               data-parent-id='{{effect.parent.id}}'
               data-drag="true"
             >
-              <div class='effect-name flexrow'>
+              <div class='effect-name flexrow draggable' data-uuid='{{effect.uuid}}'>
                 <img class='effect-image' src='{{effect.img}}' />
                 <div>{{effect.name}}</div>
               </div>
