Fix Spell/Form collapsible descriptions in the chat message to support html from the Editor.

--- a/templates/chat/roll-sr6.html
+++ b/templates/chat/roll-sr6.html
@@ -213,7 +213,7 @@
    	  	</tr>
    	</table>
 		<div class="chat-spell-collapsible" style="display:none">
-   		{{configured.spellDesc}}
+   		{{{configured.spellDesc}}}
 		</div>
    </div>
    <div>
@@ -245,7 +245,7 @@
    	  	</tr>
    	</table>
 		<div class="chat-spell-collapsible" style="display:none">
-   		{{configured.formDesc}}
+   		{{{configured.formDesc}}}
 		</div>
    </div>
   	<button class="rollable" data-roll-type="soak" data-soak="fading" data-damage="{{configured.calcFade}}" data-monitor="stun" 
