--- a/templates/parts/section-lifestyles.html
+++ b/templates/parts/section-lifestyles.html
@@ -18,7 +18,7 @@
 		{{#each actor.items as |item id|}}
 		{{#iff item.type '==' 'lifestyle'}}
 		<tr class="item list-item" data-item-id="{{item.id}}">
-			<td><input name="lifestyleName{{id}}" type="text" value="{{item.name}}" data-field="name" title="{{item.system.description}}" disabled></td>
+			<td>{{item.name}}</td>
 			<td class="centered">
 				{{localize (lookup ../config.LIFESTYLE_TYPE item.system.type)}}
 			</td>
