--- a/templates/parts/section-qualities.html
+++ b/templates/parts/section-qualities.html
@@ -17,7 +17,7 @@
 				{{/if}}
 			</td>
 			<td style="height:20px;"> {{item.name}}</td>
-			<td class="centered">
+			<td class="centered" style="width: 40px;">
 				<a class="item-control item-edit" title='{{localize 'shadowrun6.label.edit' }}'><i class="fas fa-edit"></i></a>
 				<a class="item-control item-delete" title='{{localize 'shadowrun6.label.delete' }}'><i class="fas fa-trash"></i></a>
 			</td>
