--- a/templates/parts/section-spells.html
+++ b/templates/parts/section-spells.html
@@ -36,17 +36,18 @@
 				</label>
 				{{/iff}}
 			</td>
-			<td class="centered"style="width: 3em">{{item.system.drain}}</td>
-			<td class="centered">
+			<td class="centered" style="width: 3em">{{item.system.drain}}</td>
+			<td class="centered" style="width: 4em">
 				<a class="item-control spell-roll" data-type="Roll" data-uuid="{{item.uuid}}" data-item-id="{{item.id}}" title="Roll"><i class="fas fa-dice-six"></i></a>
 				<a class="item-control item-edit"   title='{{localize 'shadowrun6.label.edit' }}'><i class="fas fa-edit"></i></a>
 				<a class="item-control item-delete" title='{{localize 'shadowrun6.label.delete' }}'><i class="fas fa-trash"></i></a></td>
 	   </tr>
        <tr>
-         <td colspan="6">
-         	<div class="collapsible-content closed">
-        	   {{ localize 'shadowrun6.label.features' }}: <b>{{spellFeat item.system}}</b>
-         	</div>
+         <td colspan="7">
+			<div class="collapsible-content closed" style="font-size: 0.8em;">
+				<div style="font-weight: bold;">{{ localize 'shadowrun6.item.description' }}</div>
+				<div>{{{item.enriched.description}}} &nbsp;</div>
+			</div>
          </td>
        </tr>
 		{{/iff}}
