--- a/templates/parts/section-metamagics.html
+++ b/templates/parts/section-metamagics.html
@@ -9,12 +9,27 @@
 		{{#each actor.items as |item id|}}
 		{{#iff item.type '==' 'metamagic'}}
 		<tr class="item list-item" data-item-id="{{item.id}}">
-			<td> <input name="metamagicName{{id}}" class="draggable" data-uuid="{{item.uuid}}" type="text" value="{{item.name}}" data-field="name" title="{{sr6_description item.system item.type}}" disabled></td>
-			<td> <input name="metamagicExplain{{id}}" type="text" value="{{item.system.explain}}" data-field="system.explain" class="secondary" placeholder="Details" disabled></td>
-			<td><a class="item-control item-edit" title='{{localize 'shadowrun6.label.edit' }}'><i
-					class="fas fa-edit"></i></a> <a class="item-control item-delete"
-				title='{{localize 'shadowrun6.label.delete' }}'><i class="fas fa-trash"></i></a></td>
+			<td style="margin-right: 1rem; width: 0.7em;">
+				{{#if item.system.description }}
+				<button type="button" name="collapseGear{{id}}" class="collapsible closed" data-item-id="{{this.id}}">+</button>
+				{{else}}
+				<button type="button" name="collapseGear{{id}}" class="collapsible closed empty" data-item-id="{{this.id}}">+</button>
+				{{/if}}
+			</td>
+			<td>{{item.name}}</td>
+			<td style="width: 3em">
+				<a class="item-control item-edit" title='{{localize 'shadowrun6.label.edit' }}'><i class="fas fa-edit"></i></a>
+				<a class="item-control item-delete" title='{{localize 'shadowrun6.label.delete' }}'><i class="fas fa-trash"></i></a>
+			</td>
 		</tr>
+       	<tr>
+			<td colspan="3">
+				<div class="collapsible-content closed" style="font-size: 0.8em;">
+					<div style="font-weight: bold;">{{ localize 'shadowrun6.item.description' }}</div>
+					<div>{{{item.enriched.description}}} &nbsp;</div>
+				</div>
+			</td>
+       	</tr>
 		{{/iff}}
 		{{/each}}
 	</table>
