--- a/templates/item/shadowrun6-echo-sheet-ro.html
+++ b/templates/item/shadowrun6-echo-sheet-ro.html
@@ -5,8 +5,7 @@
         <img src="{{item.img}}" data-edit="img" title="{{item.name}}" style="background-color: var(--highlight-color)"/>
         <div class="section">
             <h3>{{localize 'shadowrun6.item.description'}}</h3>
-            <textarea class="box" type="text" name="system.description" cols="50"
-                rows="8">{{item.system.description}}</textarea>
+            {{{item.system.description}}}
         </div>
     </section>
 </form>
