--- a/templates/parts/section-echoes.html
+++ b/templates/parts/section-echoes.html
@@ -8,13 +8,22 @@
 <table>
 		{{#each actor.items as |item id|}}
 		{{#iff item.type '==' 'echo'}}
-		<tr class="item list-item" data-item-id="{{item.id}}">
-			<td> <input name="echoName{{id}}" type="text" value="{{item.name}}" data-field="name" title="{{sr6_description item.system item.type}}" disabled></td>
-			<td> <input name="echoExplain{{id}}" type="text" value="{{item.system.explain}}" data-field="system.explain" class="secondary" placeholder="Details" disabled></td>
-			<td><a class="item-control item-edit" title='{{localize 'shadowrun6.label.edit' }}'><i
-					class="fas fa-edit"></i></a> <a class="item-control item-delete"
-				title='{{localize 'shadowrun6.label.delete' }}'><i class="fas fa-trash"></i></a></td>
-	   </tr>
+		<tr class="item list-item draggable" data-item-id="{{item.id}}" data-uuid="{{item.uuid}}">
+      		<td style="width:1rem"><button type="button" name="collapseSpell{{id}}" class="collapsible closed" data-item-id="{{this.id}}">+</button></td>
+			<td>{{item.name}}</td>
+			<td style="width: 2.5em">
+				<a class="item-control item-edit" title='{{localize 'shadowrun6.label.edit' }}'><i class="fas fa-edit"></i></a>
+				<a class="item-control item-delete" title='{{localize 'shadowrun6.label.delete' }}'><i class="fas fa-trash"></i></a>
+			</td>
+		</tr>
+		<tr>
+			<td colspan="5">
+				<div class="collapsible-content closed" style="font-size: 0.8em;">
+					<div style="font-weight: bold;">{{ localize 'shadowrun6.item.description' }}</div>
+					<div>{{{item.enriched.description}}} &nbsp;</div>
+				</div>
+			</td>
+		</tr>
 		{{/iff}}
 		{{/each}}
 </table>
