--- a/templates/parts/section-focus.html
+++ b/templates/parts/section-focus.html
@@ -6,6 +6,7 @@
 	<table>
 		<thead>
 			<tr>
+				<th></th>
 				<th style="text-align:left;">{{ localize 'shadowrun6.label.column.name' }}</th>
 				<th style="width: 15%;">{{ localize 'shadowrun6.section.focus.column.rating' }}</th>
 				<th style="width: 5%;">{{ localize 'shadowrun6.label.column.action' }}</th>
@@ -13,14 +14,21 @@
 		</thead>
 		{{#each actor.items as |item id|}}
 		{{#iff item.type '==' 'focus'}}
-		<tr class="item list-item" data-item-id="{{item.id}}">
-			<td><input name="focusName{{id}}" class="draggable" data-uuid="{{item.uuid}}" type="text" value="{{item.name}}" data-field="name" title="{{item.system.description}}" disabled></td>
-			<td class="centered" style="width: 2em">
-				<input name="focusRating{{id}}" class="centered" type="text" value="{{item.system.rating}}" data-field="system.rating" data-type="Number" disabled>
-			</td>
+		<tr class="item list-item draggable" data-item-id="{{item.id}}" data-uuid="{{item.uuid}}">
+      		<td style="width:1rem"><button type="button" name="collapseSpell{{id}}" class="collapsible closed" data-item-id="{{this.id}}">+</button></td>
+			<td>{{item.name}}</td>
+			<td class="centered" style="width: 2em">{{item.system.rating}}</td>
 			<td class="centered">
 				<a class="item-control item-edit" title='{{localize 'shadowrun6.label.edit' }}'><i class="fas fa-edit"></i></a>
 				<a class="item-control item-delete" title='{{localize 'shadowrun6.label.delete' }}'><i class="fas fa-trash"></i></a>
+			</td>
+		</tr>
+		<tr>
+			<td colspan="4">
+				<div class="collapsible-content closed" style="font-size: 0.8em;">
+					<div style="font-weight: bold;">{{ localize 'shadowrun6.item.description' }}</div>
+					<div>{{{item.enriched.description}}} &nbsp;</div>
+				</div>
 			</td>
 		</tr>
 		{{/iff}}
