--- a/templates/parts/section-matrixdevices.html
+++ b/templates/parts/section-matrixdevices.html
@@ -13,7 +13,7 @@
 				<th style="padding: 0 5px 0 0px; width: 1em">{{ localize 'shadowrun6.label.firewall.short' }}</th>
 				<th style="padding: 0 5px 0 0px; width: 1em">{{ localize 'shadowrun6.label.programs.short' }}</th>
 				<th style="padding: 0 5px 0 5px; width: 3em"> </th>
-				<th style="padding: 0 5px 0 5px; width: 4rem"> </th>
+				<th style="padding: 0 5px 0 5px; width: 2.5em"></th>
 			</tr>
  		{{#each actor.items as |item id|}}
 		{{#if (eq item.type 'gear')}}
@@ -26,8 +26,8 @@
 		 (eq item.system.subtype "RIGGER_CONSOLE")
          (eq item.system.subtype "CYBERJACK"))
 		}}
-       <tr class="item" data-item-id="{{this.id}}" title="{{item.system.description}}">
-       	<td style="margin-right: 1rem"><button type="button" name="collapseMatrixDevice{{id}}" class="collapsible closed" data-item-id="{{this.id}}">+</button><label class="item-name draggable" data-uuid="{{item.uuid}}" data-skill="{{id}}">{{item.name}}</label></td>
+       <tr class="item" data-item-id="{{this.id}}">
+       	<td style="margin-right: 1rem"><button type="button" name="collapseMatrixDevice{{id}}" class="collapsible persistent {{item.collapsedStateOnSheet}}" data-item-id="{{this.id}}">+</button><label class="item-name draggable" data-uuid="{{item.uuid}}" data-skill="{{id}}">{{item.name}}</label></td>
          <td><label class="middle-column" >{{item.system.devRating}}</label></td>
          <td><label class="middle-column" >-</label></td>
          <td><label class="middle-column" >-</label></td>
@@ -42,25 +42,24 @@
 					  ></span>
             </label>
 		</td>
-		<td class="centered">
-			<a class="item-control item-edit" title='{{localize 'shadowrun6.label.edit' }}'><i class="fas fa-edit"></i></a> 
+		 <td class="centered" style="width: 2.5em;">
+			<a class="item-control item-edit" title='{{localize 'shadowrun6.label.edit' }}'><i class="fas fa-edit"></i></a>
 			<a class="item-control item-delete" title='{{localize 'shadowrun6.label.delete' }}'><i class="fas fa-trash"></i></a>
          </td>
        </tr>
        <tr>
          <td colspan="9">
-         	<div class="collapsible-content closed">
-        	   {{ localize 'shadowrun6.label.accessories' }} <textarea class="box" type="text" data-item-id="{{this.id}}" data-field="system.accessories" type="text" data-dtype="Text" style="width: 25em">{{item.system.accessories}}</textarea>
+         	<div class="collapsible-content {{item.collapsedStateOnSheet}}">
 				{{# if (eq item.system.subtype "COMMLINK")}}
 			   {{> "systems/shadowrun6-eden/templates/parts/programs.html" config=../config item=this }}
 			   {{/if}}
-        	   </div>
+			</div>
          </td>
        </tr>
 		{{/if}}
 		{{#if (eq item.system.subtype "CYBERDECK") }}
-       <tr class="item" data-item-id="{{this.id}}" title="{{item.system.description}}">
-       	<td style="margin-right: 1rem"><button type="button" name="collapseDeck{{id}}" class="collapsible closed" data-item-id="{{this.id}}">+</button><label class="item-name draggable" data-uuid="{{item.uuid}}" data-skill="{{id}}">{{item.name}}</label></td>
+       <tr class="item" data-item-id="{{this.id}}">
+       	<td style="margin-right: 1rem"><button type="button" name="collapseDeck{{id}}" class="collapsible persistent {{item.collapsedStateOnSheet}}"" data-item-id="{{this.id}}">+</button><label class="item-name draggable" data-uuid="{{item.uuid}}" data-skill="{{id}}">{{item.name}}</label></td>
          <td><label class="middle-column" >{{item.system.devRating}}</label></td>
          <td><label class="middle-column" >{{item.system.a}}</label></td>
          <td><label class="middle-column" >{{item.system.s}}</label></td>
@@ -75,18 +74,16 @@
 					  ></span>
             </label>
 		 </td>
-		 <td class="centered">
-				<a class="item-control item-edit" title='{{localize 'shadowrun6.label.edit' }}'>
-					<i class="fas fa-edit"></i></a> <a class="item-control item-delete" title='{{localize 'shadowrun6.label.delete' }}'><i class="fas fa-trash"></i>
-				</a>
+		 <td class="centered" style="width: 2.5em;">
+			<a class="item-control item-edit" title='{{localize 'shadowrun6.label.edit' }}'><i class="fas fa-edit"></i></a>
+			<a class="item-control item-delete" title='{{localize 'shadowrun6.label.delete' }}'><i class="fas fa-trash"></i></a>
          </td>
        </tr>
        <tr>
          <td colspan="9">
-         	<div class="collapsible-content closed">
-        	   {{ localize 'shadowrun6.label.accessories' }} <textarea class="box" type="text"     data-item-id="{{this.id}}" data-field="system.accessories" type="text" data-dtype="Text" style="width: 25em">{{item.system.accessories}}</textarea>
+         	<div class="collapsible-content {{item.collapsedStateOnSheet}}">
 				{{> "systems/shadowrun6-eden/templates/parts/programs.html" config=../config item=this }}
-        	   </div>
+			</div>
          </td>
        </tr>
 		{{/if}}
