--- a/templates/parts/section-matrixbase.html
+++ b/templates/parts/section-matrixbase.html
@@ -22,7 +22,7 @@
 		<div class="centered rubik-glitch-regular" style="padding: 0.5rem 0 0.2rem 0;">
 			{{ localize 'shadowrun6.section.matrix_base.overwatch' }}
 		</div>     
-		<div class="edge overwatch" style="width: 80px; height:80px">
+		<div class="edge overwatch clickable" style="width: 80px; height:80px">
 			<img src="systems/shadowrun6-eden/images/all-seeing-eye.webp" />
 			<input name="matrixOverwatch" class="edge-value" style="z-index: 2;" type="text" data-dtype="Number" data-field="system.overwatch" value="{{system.overwatch}}" disabled/>
 		</div>
